[gd_scene format=3 uid="uid://ceokrukww4ic8"]

[ext_resource type="Script" uid="uid://dnjgl73e7upof" path="res://scripts/UI/popup_menu.gd" id="1_1u5a3"]
[ext_resource type="Texture2D" uid="uid://rhw6r8lf8r0n" path="res://assets/menu/UI_TravelBook_BookCover01a.png" id="1_55rel"]
[ext_resource type="FontFile" uid="uid://d4fqcjicieold" path="res://assets/font/PixelPurl.ttf" id="2_1u5a3"]
[ext_resource type="Texture2D" uid="uid://bxlsqbkvh02qs" path="res://assets/menu/UI_TravelBook_FrameSelect01a.png" id="3_lakus"]

[node name="PopupMenu" type="CanvasLayer" unique_id=985467771]
process_mode = 3
scale = Vector2(3.2, 2.8)
transform = Transform2D(3.2, 0, 0, 2.8, 0, 0)
script = ExtResource("1_1u5a3")

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=1812131255]
offset_right = 200.0
offset_bottom = 171.0

[node name="TextureRect" type="TextureRect" parent="." unique_id=193344704]
offset_left = 57.1875
offset_top = 28.571438
offset_right = 145.03125
offset_bottom = 143.57147
texture = ExtResource("1_55rel")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=817166014]
texture_filter = 1
offset_left = 66.25
offset_top = 35.714294
offset_right = 136.25
offset_bottom = 137.7143
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
mouse_filter = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer" unique_id=1213895199]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_1u5a3")
text = "Menu"

[node name="ButtonContinue" type="Button" parent="VBoxContainer" unique_id=127510731]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.0056611313, 0.0056611616, 0.0056611407, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("2_1u5a3")
text = "Continue"
icon = ExtResource("3_lakus")
flat = true
icon_alignment = 1

[node name="ButtonSettings" type="Button" parent="VBoxContainer" unique_id=885365528]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.0056611313, 0.0056611616, 0.0056611407, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("2_1u5a3")
text = "Settings"
icon = ExtResource("3_lakus")
flat = true
icon_alignment = 1

[node name="ButtonSave" type="Button" parent="VBoxContainer" unique_id=557564977]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.00011382764, 0.00011382824, 0.000113827795, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("2_1u5a3")
text = "Save"
icon = ExtResource("3_lakus")
flat = true
icon_alignment = 1

[node name="ButtonQuit" type="Button" parent="VBoxContainer" unique_id=463989834]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.008201996, 0.008202039, 0.008202008, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
theme_override_fonts/font = ExtResource("2_1u5a3")
text = "Quit"
icon = ExtResource("3_lakus")
flat = true
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/ButtonContinue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSettings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_quit_pressed"]
